--- a/user_superadmin/hr_karyawan.html
+++ b/user_superadmin/hr_karyawan.html
@@ -357,6 +357,9 @@ License: You must have a valid license purchased only from themeforest(the above
 													Daftar Karyawan
 												</h3>
 											</div>
+											<div class="kt-portlet__head-toolbar">
+												<a href="user_superadmin/hr_karyawan_new.html" class="btn btn-sm btn-success" data-toggle="modal" data-target="#kt_modal_karyawan_tambah"><i class="flaticon2-user" style="color: white;"></i> Tambah Karyawan</a>
+											</div>
 										</div>
 										<div class="kt-portlet__body">
                                             <table class="table table-bordered table-hover table-checkable" id="table_karyawan"></table>
@@ -367,6 +370,71 @@ License: You must have a valid license purchased only from themeforest(the above
 								</div>
 
 							</div>
+
+							<!--begin::Modal-->
+							<div class="modal fade" id="kt_modal_karyawan_tambah" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog modal-lg" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLabel">Treatment Selesai</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            </button>
+                                        </div>
+										<form id="kt_form_karyawan_tambah">
+	                                        <div class="modal-body">
+												<div class="form-group row">
+                                                    <label for="example-text-input" class="col-4 col-form-label">Nama:</label>
+                                                    <div class="col-8">
+                                                        <input type="text" class="form-control" name="karyawan_nama" placeholder="Nama">
+                                                    </div>
+                                                </div>
+												<div class="form-group row">
+                                                    <label for="example-text-input" class="col-4 col-form-label">Jabatan:</label>
+                                                    <div class="col-8">
+                                                        <input type="text" class="form-control" name="karyawan_jabatan" placeholder="Jabatan">
+                                                    </div>
+                                                </div>
+												<div class="form-group row">
+                                                    <label for="example-text-input" class="col-4 col-form-label">Alamat:</label>
+                                                    <div class="col-8">
+                                                        <input type="text" class="form-control" name="karyawan_alamat" placeholder="Alamat">
+                                                    </div>
+                                                </div>
+												<div class="form-group row">
+                                                    <label for="example-text-input" class="col-4 col-form-label">Email:</label>
+                                                    <div class="col-8">
+                                                        <input type="email" class="form-control" name="karyawan_email" placeholder="Email">
+                                                    </div>
+                                                </div>
+												<div class="form-group row">
+                                                    <label for="example-text-input" class="col-4 col-form-label">No. HP:</label>
+                                                    <div class="col-8">
+                                                        <input type="text" class="form-control" name="karyawan_nohp" placeholder="No. HP">
+                                                    </div>
+                                                </div>
+												<div class="form-group row">
+                                                    <label for="example-text-input" class="col-4 col-form-label">Username</label>
+                                                    <div class="col-8">
+                                                        <input type="text" class="form-control" name="karyawan_username" placeholder="Username">
+                                                    </div>
+                                                </div>
+												<div class="form-group row">
+                                                    <label for="example-text-input" class="col-4 col-form-label">Password</label>
+                                                    <div class="col-8">
+                                                        <input type="password" class="form-control" name="karyawan_password" placeholder="Password">
+                                                    </div>
+                                                </div>
+	                                        </div>
+	                                        <div class="modal-footer" style="justify-content:center;">
+	                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+	                                            <button type="submit" class="btn btn-success" id="kt_sweetalert_berhasil">Submit</button>
+	                                        </div>
+										</form>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!--end::Modal-->
 
 						</div>
 
@@ -444,6 +512,56 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!--begin::Page Scripts(used by this page) -->
 		<script src="assets/js/script/datatable_superadmin.js"></script>
 		<script src="assets/js/custom/datepicker.js" type="text/javascript"></script>
+
+		<script>
+			// Sweetalert
+			$('#kt_sweetalert_berhasil').click(function(e) {
+				swal.fire({
+					title: "Berhasil",
+					text: "Karyawan berhasil ditambahkan.",
+					type: "success",
+					confirmButtonText: "Ok",
+					confirmButtonClass: "btn btn-brand"
+				}).then(function(result) {
+					// location.reload();
+				});
+			});
+
+			// Form Validation
+			$("#kt_form_karyawan_tambah").validate({
+	            // define validation rules
+	            rules: {
+					karyawan_nama : {
+						required: true
+					},
+					karyawan_jabatan : {
+						required: true
+					},
+					karyawan_alamat : {
+						required: true
+					},
+					karyawan_email : {
+						required: true
+					},
+					karyawan_nohp : {
+						required: true
+					},
+					karyawan_username : {
+						required: true
+					},
+					karyawan_password : {
+						required: true
+					}
+	            },
+
+	            invalidHandler: function(event, validator) {
+	                KTUtil.scrollTop();
+	            },
+	            submitHandler: function(form) {
+	                //form[0].submit(); // submit the form
+	            }
+        	});
+		</script>
 
 		<!--end::Page Scripts -->
 	</body>
