--- a/user_superadmin/hr_karyawan_detail.html
+++ b/user_superadmin/hr_karyawan_detail.html
@@ -378,6 +378,11 @@ License: You must have a valid license purchased only from themeforest(the above
 														</a>
 													</li>
 													<li class="nav-item">
+														<a class="nav-link" data-toggle="tab" href="#tab-inventory" role="tab" aria-selected="false">
+															Inventory
+														</a>
+													</li>
+													<li class="nav-item">
 														<a class="nav-link" data-toggle="tab" href="#tab-payroll" role="tab" aria-selected="false">
 															Payroll
 														</a>
@@ -474,6 +479,24 @@ License: You must have a valid license purchased only from themeforest(the above
 													<table class="table table-bordered table-hover table-checkable" id="table_karyawan_treatment"></table>
 												</div>
 												<div class="tab-pane" id="tab-kehadiran" role="tabpanel">
+													<form class="kt-margin-b-10">
+		    											<div class="row justify-space-between">
+															<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
+																<input readonly type="text" class="form-control kt-input_2" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu_2"/>
+																<div class="input-group-append">
+																	<span class="input-group-text">
+																		<i class="la la-calendar"></i>
+																	</span>
+																</div>
+															</div>
+															<div class="col-lg-4 col-sm-6">
+			    												<input type="text" class="form-control kt-input" placeholder="Search" id="kt_search_all">
+															</div>
+		    											</div>
+		    										</form>
+													<table class="table table-bordered table-hover table-checkable" id="table_karyawan_kehadiran"></table>
+												</div>
+												<div class="tab-pane" id="tab-inventory" role="tabpanel">
 													<form class="kt-margin-b-10">
 		    											<div class="row justify-space-between">
 															<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
