--- a/user_therapist/profile_kehadiran_dayoff.html
+++ b/user_therapist/profile_kehadiran_dayoff.html
@@ -300,70 +300,7 @@ License: You must have a valid license purchased only from themeforest(the above
 
                             <div class="row row-centered">
 
-                                <div class="col-12">
-									<div class="row">
-		                                <div class="col-lg-3 col-md-6">
-		                                    <div class="kt-portlet kt-portlet--height-fluid">
-		                                    	<div class="kt-widget14">
-		                                    		<div class="kt-widget14__header" style="margin-bottom:0px;">
-		                                    			<h6>
-		                                    				Total Hari Kerja
-		                                    			</h6>
-		                                    			<h3 class="kt-widget14__desc kt-margin-t-5 color-main-dark">
-		                                    				<span name="kehadiran_kerja">200</span><span> Hari</span>
-		                                    			</h3>
-		                                    		</div>
-		                                    	</div>
-		                                    </div>
-		                                </div>
-		                                <div class="col-lg-3 col-md-6">
-		                                    <div class="kt-portlet kt-portlet--height-fluid">
-		                                    	<div class="kt-widget14">
-		                                    		<div class="kt-widget14__header" style="margin-bottom:0px;">
-		                                    			<h6>
-		                                    				Sisa Cuti
-		                                    			</h6>
-		                                    			<h3 class="kt-widget14__desc kt-margin-t-5 color-main-dark">
-		                                    				<span name="kehadiran_cuti">20</span><span> Hari</span>
-		                                    			</h3>
-		                                    		</div>
-		                                    	</div>
-		                                    </div>
-		                                </div>
-		                                <div class="col-lg-3 col-md-6">
-		                                    <div class="kt-portlet kt-portlet--height-fluid">
-		                                    	<div class="kt-widget14">
-		                                    		<div class="kt-widget14__header" style="margin-bottom:0px;">
-		                                    			<h6>
-		                                    				Jumlah Izin
-		                                    			</h6>
-		                                    			<h3 class="kt-widget14__desc kt-margin-t-5 color-main-dark">
-		                                    				<span name="kehadiran_izin">10</span><span> Hari</span>
-		                                    			</h3>
-		                                    		</div>
-		                                    	</div>
-		                                    </div>
-		                                </div>
-		                                <div class="col-lg-3 col-md-6">
-		                                    <div class="kt-portlet kt-portlet--height-fluid">
-		                                    	<div class="kt-widget14">
-		                                    		<div class="kt-widget14__header" style="margin-bottom:0px;">
-		                                    			<h6>
-		                                    				Jumlah Sakit
-		                                    			</h6>
-		                                    			<h3 class="kt-widget14__desc kt-margin-t-5 color-main-dark">
-		                                    				<span name="kehadiran_sakit">5</span><span> Hari</span>
-		                                    			</h3>
-		                                    		</div>
-		                                    	</div>
-		                                    </div>
-		                                </div>
-									</div>
-								</div>
-
 								<div class="col-12">
-
-                                    <!--begin::Portlet-->
 									<div class="kt-portlet">
 										<div class="kt-portlet__head">
 											<div class="kt-portlet__head-label">
@@ -374,75 +311,14 @@ License: You must have a valid license purchased only from themeforest(the above
 													Kehadiran
 												</h3>
 											</div>
-                                            <div class="kt-portlet__head-toolbar">
-												<button type="button" class="btn btn-sm btn-success" data-toggle="modal" data-target="#kt_modal_request_dayoff"><i class="flaticon2-graphic-design"></i> Request Day-Off</button>
-												<a class="kt-margin-l-5" href="user_therapist/profile_kehadiran_dayoff.html"><button type="button" class="btn btn-sm btn-outline-success"><i class="flaticon2-list-3"></i>List Request Day-Off <i class="flaticon2-right-arrow" style="font-size: 0.6rem"></i></button></a>
-											</div>
 										</div>
 										<div class="kt-portlet__body">
-                                            <table class="table table-bordered table-hover table-checkable" id="table_kehadiran"></table>
+                                            <table class="table table-bordered table-hover table-checkable" id="table_kehadiran_request_dayoff"></table>
 										</div>
 									</div>
-
-									<!--end::Portlet-->
 								</div>
+
 							</div>
-
-                            <!-- begin:: Modal -->
-                            <div class="modal fade" id="kt_modal_request_dayoff" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                <div class="modal-dialog" role="document">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h5 class="modal-title" id="exampleModalLabel">Request Day-Off</h5>
-                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            </button>
-                                        </div>
-										<form id="kt_form_dayoff">
-	                                        <div class="modal-body">
-                                                <div class="form-group row">
-                                                    <label for="example-text-input" class="col-3 col-form-label">Tanggal</label>
-                                                    <div class="col-9">
-                                                        <input type="text" class="form-control kt_multidatepicker" placeholder="Tanggal" name="dayoff_tanggal">
-                                                    </div>
-                                                </div>
-                                                <div class="form-group row">
-                                                    <label for="example-text-input" class="col-3 col-form-label">Status</label>
-                                                    <div class="col-9">
-                                                        <select class="form-control" name="dayoff_status" placeholder="Status">
-                                                            <option value="" disabled selected>Status</option>
-    														<option>Cuti Tahunan</option>
-    														<option>Izin</option>
-    														<option>Sakit</option>
-    														<option>Lain-lain</option>
-    													</select>
-                                                    </div>
-                                                </div>
-                                                <div class="form-group row">
-                                                    <label for="example-text-input" class="col-3 col-form-label">Notes</label>
-                                                    <div class="col-9">
-														<textarea class="form-control" name="dayoff_notes" rows="3" placeholder="Notes"></textarea>
-                                                    </div>
-                                                </div>
-                                                <div class="form-group row">
-                                                    <label for="example-text-input" class="col-3 col-form-label">Foto</label>
-                                                    <div class="col-9">
-														<div class="custom-file">
-															<input type="file" class="custom-file-input" name="dayoff_foto" accept="image/*">
-															<label class="custom-file-label">Choose file</label>
-														</div>
-                                                    </div>
-                                                </div>
-	                                        </div>
-	                                        <div class="modal-footer" style="justify-content:center;">
-	                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-	                                            <button type="submit" class="btn btn-success" id="kt_sweetalert_berhasil">Submit</button>
-	                                        </div>
-										</form>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <!--end::Modal-->
 
 						</div>
 
@@ -520,40 +396,6 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!--begin::Page Scripts(used by this page) -->
 		<script src="assets/js/script/datatable_therapist.js"></script>
 		<script src="assets/js/custom/datepicker.js" type="text/javascript"></script>
-
-		<script>
-			// Sweetalert
-			$('#kt_sweetalert_berhasil').click(function(e) {
-				swal.fire({
-					title: "Berhasil",
-					text: "Request berhasil dilakukan.",
-					type: "success",
-					confirmButtonText: "Ok",
-					confirmButtonClass: "btn btn-brand"
-				}).then(function(result) {
-					// location.reload();
-				});
-			});
-
-			// Form validation
-			$("#kt_form_dayoff").validate({
-				// define validation rules
-				rules : {
-					dayoff_tanggal : {
-						required: true
-					},
-					dayoff_status : {
-						required: true
-					},
-					dayoff_notes : {
-						required: true
-					},
-					dayoff_foto : {
-						required: true
-					}
-				}
-			});
-		</script>
 
 		<!--end::Page Scripts -->
 	</body>
