--- a/user_admin/index.html
+++ b/user_admin/index.html
@@ -411,7 +411,7 @@ License: You must have a valid license purchased only from themeforest(the above
 												<div class="form-group row">
 													<label class="col-sm-4 col-form-label">Nama :</label>
 													<div class="col-sm-8">
-														<input type="text" class="form-control" name="customer_nama" placeholder="Nama" readonly>
+														<input type="text" class="form-control" name="customer_nama" placeholder="Nama">
 													</div>
 												</div>
 												<div class="form-group row">
